Work around transform scrollbar bug in Edge

--- a/sic1/client/css/sic1-client.css
+++ b/sic1/client/css/sic1-client.css
@@ -43,9 +43,9 @@ html, body {
 
 #messageBox {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
     padding: 1px;
     background-color: lime;
     z-index: 20;
